crates/rome_js_formatter/tests/specs/prettier/js/empty-statement/body.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: body.js

---
# Input
```js
with (a);
if (1); else if (2); else;
for (;;);
while (1);
for (var i in o);
for (var i of o);
do; while(1);

```

# Output
```js
with (a);
if (1) {
} else if (2) {
} else {
}
for (;;);
while (1);
for (var i in o);
for (var i of o);
do while (1);

```

# Errors
```
error[SyntaxError]: `with` statements are not allowed in strict mode
  ┌─ body.js:1:1
  │
1 │ with (a);
  │ ^^^^^^^^^


```


